removed test solve button

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                     <div class="puzzle-controls">
                         <button id="clear-btn" class="puzzle-btn">Clear</button>
                         <button id="unlock-btn" class="puzzle-btn">Unlock</button>
-                        <button id="solve-puzzle-btn" class="puzzle-btn" style="background: #4CAF50; color: white;">Solve Puzzle (TEST)</button>
+                        <!-- <button id="solve-puzzle-btn" class="puzzle-btn" style="background: #4CAF50; color: white;">Solve Puzzle (TEST)</button> -->
                     </div>
                 </div>
             </div>
