changed title words

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
             unlockBtn.addEventListener('click', checkCode);
 
             // Initial Setup
-            showModal('Welcome, young Lincoln! Click the crystal ball to begin your quest.', false);
+            showModal('Happy birthday Lincoln! This is your birthday quest.', false);
             loadPuzzle(0);
 
             // Hide modal on click/touch
